--- a/style/style.css
+++ b/style/style.css
@@ -225,3 +225,71 @@ body {
   text-decoration-line: underline;
 }
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Next Target Start Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
+.support-section-container {
+  width: 1140px;
+  height: 313px;
+  margin: 0 auto;
+  background-image: url("../assets/handshake.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 16px;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-blend-mode: overlay;
+  margin-top: 50px;
+}
+.support-section-container-content {
+  padding: 64px 48px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.support-section-container-content h1 {
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.support-section-container-content p {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.7;
+  margin-top: 16px;
+}
+.form{
+
+}
+.form .text {
+  margin-top: 24px;
+  width: 548px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+  color: rgba(13, 19, 33, 0.4);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: center;
+  padding: 19px 20px 19px 20px;}
+.form .submit {
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+  padding: 17px 20px 17px 20px;
+  color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+}
+/* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Next Target End Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
+
