--- a/style/style.css
+++ b/style/style.css
@@ -70,6 +70,8 @@ body {
   margin-top: 75px;
   border: 2px solid red;
   margin-bottom: 48px;
+  border-radius: 16px;
+  background: rgba(13, 19, 33, 0.02);
 }
 .content {
   margin-top: 85px;
@@ -101,13 +103,18 @@ body {
   display: flex;
   gap: 100px;
   justify-content: space-between;
-  align-items: center;
-  margin: auto;
+  align-items: left;
+  margin:0 auto;
   margin-top: 48px;
+  background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+
 }
 .box-text-content {
   width: 50%;
   height: 220px;
+  border-radius: 16px;
+  padding: 48px;
+
 }
 .box-text-content h2 {
   color: rgba(13, 19, 33, 0.7);
@@ -162,12 +169,11 @@ body {
   padding: 32px;
 }
 /* <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- --> */
-/* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Next Target Start Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
+/* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Current Target Start Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
 .target-section {
   width: 1140px;
   height: 550px;
   margin: 0 auto;
-  border: 2px solid red;
 }
 .skills-section {
   display: flex;
@@ -180,12 +186,19 @@ body {
   height: 300px;
   background: rgba(255, 76, 30, 0.05);
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 16px;
 }
 .skill-content {
   /* width: 32%; */
   margin: 40px;
   border-radius: 16px;
   /* padding: 40px; */
+}
+.second {
+  background: rgba(0, 76, 232, 0.05);
+}
+.third {
+  background: rgba(255, 223, 0, 0.05);
 }
 .skill-content .second {
   border-radius: 16px;
@@ -293,7 +306,7 @@ body {
 }
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Next Target End Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
 /* =-=-=-=-=-=-=-=-=-=-=-=--=-Footer_section Start Here=-=-=-=-=--=-=-=-=-=-=-=-=-=-=-=- */
-.footer-section {
+#footer-section {
   width: 1440px;
   height: 100px;
   border-radius: 16px;
@@ -315,8 +328,8 @@ body {
   letter-spacing: 0%;
   text-align: center;
 }
-.social{
+.social {
   display: flex;
   gap: 24px;
-  
 }
+/* =-=-=-=-=-=-=-=-=-=-=-=--=-Footer_section End Here=-=-=-=-=--=-=-=-=-=-=-=-=-=-=-=- */
