--- a/style/style.css
+++ b/style/style.css
@@ -64,30 +64,35 @@ body {
 
 /* <!---=--==--==--==--==--==- Web Development Start Here??-==--=---==--==- --> */
 .Development-section {
+  width: 1240px;
+  height: 1325px;
+  margin: auto;
+  margin: 75px;
+}
+
+.Development-section-container {
   width: 1140px;
-  height: 1395px;
-  margin: 0 auto;
-  margin-top: 75px;
-  border: 2px solid red;
-  margin-bottom: 48px;
+  height: 1340px;
   border-radius: 16px;
   background: rgba(13, 19, 33, 0.02);
+  /* margin: auto; */
 }
 .content {
-  margin-top: 85px;
-  text-align: center;
+  padding: 60px 95px;
+  border-radius: 16px;
+  margin: 0 auto;
 }
-.title {
+
+.content h1 {
   color: rgb(13, 19, 33);
   font-size: 32px;
   font-weight: 800;
   line-height: 37px;
   letter-spacing: 0%;
   text-align: center;
-  margin-top: 85px;
-  margin-bottom: 24px;
+  /* margin-top: 85px; */
 }
-.description {
+.content p {
   color: rgb(13, 19, 33);
   font-size: 16px;
   font-weight: 400;
@@ -95,26 +100,39 @@ body {
   letter-spacing: 0%;
   text-align: center;
   opacity: 0.7;
+  margin-top: 24px;
   margin-bottom: 48px;
 }
+/* =-=-=-=-Box-container=-=-=-=-=-=- */
+
 .box-container {
   width: 946px;
-  height: 336px;
+  height: 300px;
   display: flex;
-  gap: 100px;
-  justify-content: space-between;
+  gap: 110px;
+  justify-content: center;
   align-items: left;
-  margin:0 auto;
-  margin-top: 48px;
-  background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
-
-}
-.box-text-content {
-  width: 50%;
-  height: 220px;
+  margin: 0 auto;
   border-radius: 16px;
-  padding: 48px;
+  background: linear-gradient(
+    90deg,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0) 100%
+  );
+  margin-bottom: 32px;
+  box-shadow: 6px 0px 50px 0px, rgb(255, 255, 255);
+}
+.second-box {
+  display: flex;
+  gap: 50px;
+  justify-content: center;
+  align-items: center;
+}
 
+.box-text-content {
+  width: 450px;
+  height: 240px;
+  margin: 48px;
 }
 .box-text-content h2 {
   color: rgba(13, 19, 33, 0.7);
@@ -149,8 +167,11 @@ body {
   margin-bottom: 48px;
 }
 .box-img {
-  width: 50%;
+  width: 259.56px;
+  height: 217.01px;
+  margin: auto;
 }
+
 /* <!---=--==--==--==--==--==- Web Development End Here??-==--=---==--==- --> */
 
 /* <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration Start Here =-=-=-=-=-=-=-=-=-=-=-=- --> */
@@ -158,9 +179,30 @@ body {
 .Inspiration-section {
   width: 1140px;
   height: 775px;
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
+  margin-top: 88px;
 }
+.Inspiration-section-title {
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.Inspiration-section-description {
+  margin-bottom: 48px;
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  opacity: 0.7;
+}
+
 .video iframe {
   margin: 0 auto;
   box-sizing: border-box;
@@ -172,8 +214,26 @@ body {
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Current Target Start Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
 .target-section {
   width: 1140px;
-  height: 550px;
+  height: 450px;
   margin: 0 auto;
+}
+.target-section-title {
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 37px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.target-section-description {
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-bottom: 48px;
 }
 .skills-section {
   display: flex;
@@ -182,17 +242,16 @@ body {
   align-items: center;
 }
 .skills-section-container {
-  width: 364px;
-  height: 300px;
+  width: 340px;
+  height: 270px;
   background: rgba(255, 76, 30, 0.05);
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
   border-radius: 16px;
 }
 .skill-content {
-  /* width: 32%; */
-  margin: 40px;
   border-radius: 16px;
-  /* padding: 40px; */
+  padding: 40px;
+  
 }
 .second {
   background: rgba(0, 76, 232, 0.05);
@@ -228,7 +287,7 @@ body {
   text-align: left;
   margin-bottom: 24px;
 }
-.skill-content a {
+.skill-content .learn a {
   color: rgb(13, 19, 33);
   font-size: 16px;
   font-weight: 700;
@@ -236,7 +295,10 @@ body {
   letter-spacing: 0%;
   text-align: left;
   text-decoration-line: underline;
+  margin-bottom: 40px;
 }
+
+
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Next Target Start Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
 .support-section-container {
   width: 1140px;
