--- a/style/style.css
+++ b/style/style.css
@@ -8,62 +8,67 @@
 li {
   list-style: none;
 }
-
+a {
+  text-decoration: none;
+  color: rgb(13, 19, 33);
+}
+.hide {
+  display: none;
+}
 
 /* <!-- ==--==--==--=--==--== Banner Section Stat Here--==--==--==--==--==--== --> */
+.menu-section {
+  width: 80%;
+  margin: 0 auto;
+}
 .menu-section ul {
   display: flex;
-  justify-content: space-around;
-  margin: 40px 0;
-  text-decoration: none;
-  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-.menu-section ul a {
-  font-size: 30px;
+ul li {
+  font-size: 28px;
   font-weight: 800;
-  color: black;
-  text-decoration: none;
+  line-height: 33px;
+  letter-spacing: 0%;
+  text-align: left;
 }
-.menu-section ul li button {
-  width: 230px;
-  height: 60px;
-}
-.menu-section ul li button a {
+.btn-btn {
+  box-sizing: border-box;
+  border: 1px solid rgb(13, 19, 33);
+  border-radius: 8px;
+  opacity: 0.8;
+  padding: 20px 30px;
+  color: rgb(13, 19, 33);
   font-size: 20px;
   font-weight: 600;
-  text-decoration: none;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
 }
 
 .banner-section {
-  width: 100%;
-  height: 652px;
- margin: auto;
+  max-width: 100%;
   background: url(../assets/Hero-bg.png);
-  margin-bottom: 74px;
   margin-top: 25px;
+  padding-bottom: 70px;
 }
 .banner-container {
-  width: 990px;
-  height: 584px;
-  padding: 26px 220;
-  margin: auto;
+  width: 80%;
+  margin: 0 auto;
 }
 .banner-title .image {
-  margin: auto;
-  width: 240px;
-  height: 240px;
-  padding-top: 26px;
+  text-align: center;
+  padding-top: 30px;
   margin-bottom: 32px;
 }
 .banner-title-text {
-  width: 998px;
-  height: 310px;
   text-align: center;
 }
 
 .banner-title h1 {
-  width: 998px;
-  height: 136px;
   color: rgb(13, 19, 33);
   font-size: 42px;
   font-weight: 800;
@@ -91,7 +96,6 @@ li {
   letter-spacing: 0%;
   text-align: center;
   padding: 21px 24px 21px 24px;
-  /* margin-bottom: 65px; */
 }
 .btn {
   text-decoration: none;
@@ -101,17 +105,14 @@ li {
 
 /* <!---=--==--==--==--==--==- Web Development Start Here??-==--=---==--==- --> */
 .Development-section {
-  width: 1140px;
-  height: 1395px;
+  width: 80%;
   margin: 0 auto;
+  margin-top: 75px;
 }
 
 .Development-section-container {
-  width: 1140px;
-  height: 1340px;
   border-radius: 16px;
   background: rgba(13, 19, 33, 0.02);
-  /* margin: auto; */
 }
 .content {
   padding: 60px 95px;
@@ -126,7 +127,6 @@ li {
   line-height: 37px;
   letter-spacing: 0%;
   text-align: center;
-  /* margin-top: 85px; */
 }
 .content p {
   color: rgb(13, 19, 33);
@@ -156,12 +156,21 @@ li {
     rgba(255, 255, 255, 0) 100%
   );
   margin-bottom: 32px;
+  padding: 48px;
+}
+.second-box {
+  width: 946px;
+  height: 300px;
+  background: linear-gradient(
+    to left,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 .box-text-content {
   width: 450px;
-  height: 240px;
-  margin: 48px;
+  height: 250px;
 }
 .box-text-content h2 {
   color: rgba(13, 19, 33, 0.7);
@@ -195,11 +204,10 @@ li {
   opacity: 0.7;
   margin-bottom: 48px;
 }
-.btn-primary a{
+.btn-primary a {
   list-style: none;
   text-decoration: none;
   color: rgb(13, 19, 33);
-
 }
 
 .box-img {
@@ -213,8 +221,7 @@ li {
 /* <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration Start Here =-=-=-=-=-=-=-=-=-=-=-=- --> */
 
 .Inspiration-section {
-  width: 1140px;
-  height: 775px;
+  width: 80%;
   margin: 0 auto;
   text-align: center;
   margin-top: 88px;
@@ -256,8 +263,7 @@ li {
 /* <!-- =-=-=-=-=-=-=-=-=-=-=-=-My Inspiration End Here =-=-=-=-=-=-=-=-=-=-=-=- --> */
 /* =-=-=-=-=-=-=-=-=-=-=-=-=-=-=My Current Target Start Here=-=-=-=-=-=-=-=-=-=-=-=-=- */
 .target-section {
-  width: 1140px;
-  height: 450px;
+  width:80%;
   margin: 0 auto;
   margin-top: 150px;
 }
@@ -411,7 +417,6 @@ li {
 /* =-=-=-=-=-=-=-=-=-=-=-=--=-Footer_section Start Here=-=-=-=-=--=-=-=-=-=-=-=-=-=-=-=- */
 #footer-section {
   width: 100%;
-  height: 100px;
   border-radius: 16px;
   background: rgba(13, 19, 33, 0.03);
   margin-top: 80px;
